<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/catdetailToolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="4dp"
        android:outlineProvider="bounds"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="3"
        android:outlineProvider="bounds"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="2dp"
            app:cardElevation="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/img_cat_detail"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_launcher_background"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text = "@string/cat_name"
                            android:textStyle="bold"
                            android:textSize="@dimen/tv_catDetail"/>

                        <TextView
                            android:id="@+id/tv_cat_name_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:textSize="@dimen/tv_catDetail"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text = "@string/cat_sex"
                            android:textStyle="bold"
                            android:textSize="@dimen/tv_catDetail"/>

                        <TextView
                            android:id="@+id/tv_cat_gender_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/tv_catDetail"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text = "@string/cat_breed"
                            android:textStyle="bold"
                            android:textSize="@dimen/tv_catDetail"/>

                        <TextView
                            android:id="@+id/tv_cat_breed_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/tv_catDetail"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text = "@string/cat_zip"
                            android:textStyle="bold"
                            android:textSize="@dimen/tv_catDetail"/>

                        <TextView
                            android:id="@+id/tv_cat_zip_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/tv_catDetail"/>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_margin="8dp"
        android:outlineProvider="bounds"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="2dp"
            app:cardElevation="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/cat_des"
                    android:textStyle="bold"
                    android:textSize="@dimen/tv_catDetail"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_cat_des_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/tv_catDetail"/>

                </ScrollView>


            </LinearLayout>

        </android.support.v7.widget.CardView>




    </LinearLayout>


</LinearLayout>